-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.15.0
-
3
-
9223372036854775807
sanity-quota test_40b started failing with ‘project id expected 2 not 1' on January 10, 2022 with 2.14.56.67 servers and 2.14.0 clients with logs at https://testing.whamcloud.com/test_sets/673d6bdc-3a8b-470e-998a-2cfe113ac0a5.
On the same day, we see a filure between 2.14.56.67 servers and 2.12.7 clients with logs at https://testing.whamcloud.com/test_sets/e8909fc4-8359-452e-adf8-2c02d8ae09c6.
Looking at the suite_log, we see
== sanity-quota test 40b: Mv across different project ID ============================================= 05:45:15 (1641793515) CMD: trevis-48vm4 /usr/sbin/lctl get_param -n version 2>/dev/null Waiting for local destroys to complete Creating test directory CMD: trevis-48vm3,trevis-48vm4 lctl set_param fail_val=0 fail_loc=0 fail_val=0 fail_loc=0 fail_val=0 fail_loc=0 lfs project -sp 1 /mnt/lustre/d40b.sanity-quota/dir1 lfs project -sp 2 /mnt/lustre/d40b.sanity-quota/dir2 sanity-quota test_40b: @@@@@@ FAIL: project id expected 2 not 1 Trace dump: = /usr/lib64/lustre/tests/test-framework.sh:6273:error() = /usr/lib64/lustre/tests/sanity-quota.sh:3489:test_40b()
There were a few patches that landed to master on January 6 that modify the quota/project id code:
https://review.whamcloud.com/45256 - LU-15097 quota: stop pool_recalc before killing pool
https://review.whamcloud.com/45032 - LU-15031 quota: reseed glbe in qmt_lvbo_udate
https://review.whamcloud.com/43987 - LU-13587 quota: protect qpi in proc
https://review.whamcloud.com/45679 - LU-12056 ldiskfs: add trusted.projid virtual xattr